Fix nav title spacing on mobile

--- a/assets/css/scss/global/_navigation.scss
+++ b/assets/css/scss/global/_navigation.scss
@@ -11,6 +11,8 @@
 			font-size: 2rem;
 			color: $color-white;
 
+			margin-right: 40px;
+
 			@media (min-width: 768px) {  
  				font-size: 3rem;
 			}
